# meno

./: .gitignore  ACCESSIBILITY_FIXES.md  AGENT_NATIVE_REVIEW_PR14.md  CLAUDE.md  PR_PERFORMANCE_ANALYSIS.md  QUICKSTART.md  README.md  TYPE_SAFETY_SUMMARY.md  compound-engineering.local.md
.claude/: settings.json
backend/: .coverage  .env.example  README.md  pyproject.toml
backend/app/: exceptions.py  main.py
backend/app/api/: dependencies.py
backend/app/core/: config.py  insurance_normalizer.py  supabase.py
backend/app/llm/: appointment_prompts.py  system_prompts.py
backend/app/migrations/: add_appointment_prep_metadata_index.sql  add_appointment_prep_metadata_table.sql  add_frequency_stats_to_appointment_prep_contexts.sql  add_frequency_stats_to_appointment_prep_contexts_down.sql  add_insurance_to_users.sql  add_mht_medication_tracking.sql  add_narrative_to_appointment_prep_contexts.sql  add_pmc_id_to_rag_documents.sql  add_provider_shortlist.sql  add_qualitative_context_to_appointment_prep_contexts.sql  add_urgent_symptom_column.sql  migrate_concerns_text_array_to_jsonb.sql  (+1 more)
backend/config/: scenarios.json  starter_prompts.json
backend/migrations/: add_appointment_prep_tables.sql  add_appointment_scenarios_column.sql  add_period_tracking.sql  fix_pmc_id_unique_constraint.sql  normalize_insurance_names.sql  update_appointment_goal_check_constraint.sql
backend/scripts/: .scrape_progress.json  ingest_article.py  ingest_providers.py  prune_pubmed_chunks.py  scrape_menopause_wiki.py  scrape_nams.py  scrape_pubmed.py  test_rag.py
backend/tests/: conftest.py
(+435 files in other folders)
